lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_client.snap
---
source: lib/src/sdk/rust/mod.rs
expression: "get_file(&output, \"client.rs\")"
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.
use std::process::Command;

use crate::runtime::{CliRunner, CliResult};
use crate::types::{Arg2Choice, InstallArgs, InstallFlags, MycliArgs, MycliFlags, ShellChoice};

pub struct Mycli {
    runner: CliRunner,
    pub plugin: Plugin,
}

impl Mycli {
    pub fn new(bin_path: &str) -> Self {
        let runner = CliRunner::new(bin_path);
        Self {
            runner,
            plugin: Plugin::new(runner.clone()),
        }
    }

    pub fn default_bin() -> Self {
        Self::new("mycli")
    }
    /// [FLAGS] <ARGS>… <SUBCOMMAND>

    pub fn exec(&self, args: MycliArgs, flags: Option<MycliFlags>) -> Result<CliResult, crate::runtime::CliError> {
        let mut cmd_args: Vec<String> = vec![];
        cmd_args.push(args.arg1.to_string());
        if let Some(ref arg2) = args.arg2 { cmd_args.push(arg2.to_string()); }
        cmd_args.push(args.arg3.to_string());
        cmd_args.extend(args.argrest.iter().map(|v| v.to_string()));
        if let Some(ref with_default) = args.with_default { cmd_args.push(with_default.to_string()); }
        let flag_args = self.build_flag_args(flags);
        cmd_args.extend(flag_args);
        self.runner.run(cmd_args)
    }

    fn build_flag_args(&self, flags: Option<MycliFlags>) -> Vec<String> {
        let mut result = Vec::new();
        let flags = match flags { Some(f) => f, None => return result };
        if let Some(v) = flags.flag1 { if v { result.push("--flag1".to_string()); } }
        if let Some(v) = flags.flag2 { if v { result.push("--flag2".to_string()); } }
        if let Some(v) = flags.flag3 { if v { result.push("--flag3".to_string()); } else { result.push("--no-flag3".to_string()); } }
        if let Some(v) = flags.with_default { if v { result.push("--with-default".to_string()); } }
        if let Some(ref v) = flags.shell { result.push("--shell".to_string()); result.push(v.to_string()); }
        result
    }
}

pub struct Plugin {
    runner: CliRunner,
    pub install: Install,
}

impl Plugin {
    pub fn new(runner: CliRunner) -> Self {
        Self {
            runner,
            install: Install::new(runner.clone()),
        }
    }
    /// plugin <SUBCOMMAND>

    pub fn exec(&self) -> Result<CliResult, crate::runtime::CliError> {
        let mut cmd_args: Vec<String> = vec!["plugin".to_string()];
        self.runner.run(cmd_args)
    }
}

/// install a plugin
pub struct Install {
    runner: CliRunner,
}

impl Install {
    pub fn new(runner: CliRunner) -> Self {
        Self {
            runner,
        }
    }
    /// plugin install [FLAGS] <plugin> <version>

    pub fn exec(&self, args: InstallArgs, flags: Option<InstallFlags>) -> Result<CliResult, crate::runtime::CliError> {
        let mut cmd_args: Vec<String> = vec!["plugin".to_string(), "install".to_string()];
        cmd_args.push(args.plugin.to_string());
        cmd_args.push(args.version.to_string());
        let flag_args = self.build_flag_args(flags);
        cmd_args.extend(flag_args);
        self.runner.run(cmd_args)
    }

    fn build_flag_args(&self, flags: Option<InstallFlags>) -> Vec<String> {
        let mut result = Vec::new();
        let flags = match flags { Some(f) => f, None => return result };
        if let Some(v) = flags.global { if v { result.push("--global".to_string()); } }
        if let Some(ref v) = flags.dir { result.push("--dir".to_string()); result.push(v.to_string()); }
        if let Some(v) = flags.force { if v { result.push("--force".to_string()); } else { result.push("--no-force".to_string()); } }
        result
    }
}
