lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_double_dash_automatic.snap
---
source: lib/src/sdk/rust/mod.rs
expression: client
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.
use std::process::Command;

use crate::runtime::{CliRunner, CliResult};
use crate::types::{RunArgs, RunnerArgs, RunnerFlags};

pub struct Runner {
    runner: CliRunner,
    /// Run a task
    pub run: Run,
}

impl Runner {
    pub fn new(bin_path: &str) -> Self {
        let runner = CliRunner::new(bin_path);
        Self {
            runner,
            run: Run::new(runner.clone()),
        }
    }

    pub fn default_bin() -> Self {
        Self::new("runner")
    }
    /// [--verbose…] <input> <extra>… <SUBCOMMAND>

    pub fn exec(&self, args: RunnerArgs, flags: Option<RunnerFlags>) -> Result<CliResult, crate::runtime::CliError> {
        let mut cmd_args: Vec<String> = vec![];
        cmd_args.push(args.input.to_string());
        cmd_args.extend(args.extra.iter().map(|v| v.to_string()));
        /// double_dash=automatic: "--" is implied after the first positional arg
        let flag_args = self.build_flag_args(flags);
        cmd_args.extend(flag_args);
        self.runner.run(cmd_args)
    }

    fn build_flag_args(&self, flags: Option<RunnerFlags>) -> Vec<String> {
        let mut result = Vec::new();
        let flags = match flags { Some(f) => f, None => return result };
        if let Some(ref vals) = flags.verbose { for v in vals { if *v { result.push("--verbose".to_string()); } } }
        result
    }
}

/// Run a task
pub struct Run {
    runner: CliRunner,
}

impl Run {
    pub fn new(runner: CliRunner) -> Self {
        Self {
            runner,
        }
    }
    /// run <task>
    /// Basic run: runner run hello

    pub fn exec(&self, args: RunArgs) -> Result<CliResult, crate::runtime::CliError> {
        let mut cmd_args: Vec<String> = vec!["run".to_string()];
        cmd_args.push(args.task.to_string());
        /// double_dash=automatic: "--" is implied after the first positional arg
        self.runner.run(cmd_args)
    }
}
