lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_example_without_lang.snap
---
source: lib/src/sdk/rust/mod.rs
expression: client
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.
use std::process::Command;

use crate::runtime::{CliRunner, CliResult};
use crate::types::{GreetArgs};

pub struct App {
    runner: CliRunner,
    /// Greet someone
    pub greet: Greet,
}

impl App {
    pub fn new(bin_path: &str) -> Self {
        let runner = CliRunner::new(bin_path);
        Self {
            runner,
            greet: Greet::new(runner.clone()),
        }
    }

    pub fn default_bin() -> Self {
        Self::new("app")
    }
    /// <SUBCOMMAND>

    pub fn exec(&self) -> Result<CliResult, crate::runtime::CliError> {
        let mut cmd_args: Vec<String> = vec![];
        self.runner.run(cmd_args)
    }
}

/// Greet someone
pub struct Greet {
    runner: CliRunner,
}

impl Greet {
    pub fn new(runner: CliRunner) -> Self {
        Self {
            runner,
        }
    }
    /// greet <name>
    /// Example: app greet hello

    pub fn exec(&self, args: GreetArgs) -> Result<CliResult, crate::runtime::CliError> {
        let mut cmd_args: Vec<String> = vec!["greet".to_string()];
        cmd_args.push(args.name.to_string());
        self.runner.run(cmd_args)
    }
}
