lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_flag_edge_cases-2.snap
---
source: lib/src/sdk/rust/mod.rs
expression: client
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.
use std::process::Command;

use crate::runtime::{CliRunner, CliResult};
use crate::types::{ToolFlags};

pub struct Tool {
    runner: CliRunner,
}

impl Tool {
    pub fn new(bin_path: &str) -> Self {
        let runner = CliRunner::new(bin_path);
        Self {
            runner,
        }
    }

    pub fn default_bin() -> Self {
        Self::new("tool")
    }
    /// <FLAGS>

    pub fn exec(&self, flags: ToolFlags) -> Result<CliResult, crate::runtime::CliError> {
        let mut cmd_args: Vec<String> = vec![];
        let flag_args = self.build_flag_args(flags);
        cmd_args.extend(flag_args);
        self.runner.run(cmd_args)
    }

    fn build_flag_args(&self, flags: ToolFlags) -> Vec<String> {
        let mut result = Vec::new();
        if let Some(v) = flags.v { if v { result.push("-v".to_string()); } }
        if let Some(v) = flags._type { if v { result.push("--type".to_string()); } }
        if let Some(v) = flags.level { for _ in 0..v { result.push("--level".to_string()); } }
        if let Some(ref v) = flags.format { result.push("--format".to_string()); result.push(v.to_string()); }
        if flags.confirm { result.push("--confirm".to_string()); }
        if let Some(ref vals) = flags.verbose { for v in vals { if *v { result.push("--verbose".to_string()); } } }
        result
    }
}
