lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_flags_only_subcommand.snap
---
source: lib/src/sdk/rust/mod.rs
expression: client
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.
use std::process::Command;

use crate::runtime::{CliRunner, CliResult};
use crate::types::{StatusFlags};

pub struct App {
    runner: CliRunner,
    /// Show status
    pub status: Status,
}

impl App {
    pub fn new(bin_path: &str) -> Self {
        let runner = CliRunner::new(bin_path);
        Self {
            runner,
            status: Status::new(runner.clone()),
        }
    }

    pub fn default_bin() -> Self {
        Self::new("app")
    }
    /// <SUBCOMMAND>

    pub fn exec(&self) -> Result<CliResult, crate::runtime::CliError> {
        let mut cmd_args: Vec<String> = vec![];
        self.runner.run(cmd_args)
    }
}

/// Show status
pub struct Status {
    runner: CliRunner,
}

impl Status {
    pub fn new(runner: CliRunner) -> Self {
        Self {
            runner,
        }
    }
    /// status [--verbose] [--json]

    pub fn exec(&self, flags: Option<StatusFlags>) -> Result<CliResult, crate::runtime::CliError> {
        let mut cmd_args: Vec<String> = vec!["status".to_string()];
        let flag_args = self.build_flag_args(flags);
        cmd_args.extend(flag_args);
        self.runner.run(cmd_args)
    }

    fn build_flag_args(&self, flags: Option<StatusFlags>) -> Vec<String> {
        let mut result = Vec::new();
        let flags = match flags { Some(f) => f, None => return result };
        if let Some(v) = flags.verbose { if v { result.push("--verbose".to_string()); } }
        if let Some(v) = flags.json { if v { result.push("--json".to_string()); } }
        result
    }
}
