lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_full_feature_client.snap
---
source: lib/src/sdk/rust/mod.rs
expression: "get_file(&output, \"client.rs\")"
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.
use std::process::Command;

use crate::runtime::{CliRunner, CliResult};
use crate::types::{BuildArgs, BuildFlags, DeployArgs, DeployFlags, EnvChoice, GlobalFlags, MytoolArgs, MytoolFlags, TargetChoice};

pub struct Mytool {
    runner: CliRunner,
    /// Build the project. DEPRECATED: Use compile instead
    pub build: Build,
    /// Deploy the project
    pub deploy: Deploy,
}

impl Mytool {
    pub fn new(bin_path: &str) -> Self {
        let runner = CliRunner::new(bin_path);
        Self {
            runner,
            build: Build::new(runner.clone()),
            deploy: Deploy::new(runner.clone()),
        }
    }

    pub fn default_bin() -> Self {
        Self::new("mytool")
    }
    /// [FLAGS] <input> <extra>… <SUBCOMMAND>

    pub fn exec(&self, args: MytoolArgs, flags: Option<MytoolFlags>) -> Result<CliResult, crate::runtime::CliError> {
        let mut cmd_args: Vec<String> = vec![];
        cmd_args.push(args.input.to_string());
        cmd_args.extend(args.extra.iter().map(|v| v.to_string()));
        let flag_args = self.build_flag_args(flags);
        cmd_args.extend(flag_args);
        self.runner.run(cmd_args)
    }

    fn build_flag_args(&self, flags: Option<MytoolFlags>) -> Vec<String> {
        let mut result = Vec::new();
        let flags = match flags { Some(f) => f, None => return result };
        if let Some(v) = flags.verbose { for _ in 0..v { result.push("--verbose".to_string()); } }
        if let Some(ref v) = flags.config { result.push("--config".to_string()); result.push(v.to_string()); }
        if let Some(v) = flags.dry_run { if v { result.push("--dry-run".to_string()); } else { result.push("--no-dry-run".to_string()); } }
        result
    }
}

/// Alias for `build`.
pub fn b(&self) -> &Build { &self.build }

/// Build the project
/// DEPRECATED: Use compile instead
/// Aliases: b
pub struct Build {
    runner: CliRunner,
}

impl Build {
    pub fn new(runner: CliRunner) -> Self {
        Self {
            runner,
        }
    }
    /// build [-j --jobs… <n>] [--release] <target> <-- output>

    pub fn exec(&self, args: BuildArgs, flags: Option<BuildFlags>) -> Result<CliResult, crate::runtime::CliError> {
        let mut cmd_args: Vec<String> = vec!["build".to_string()];
        cmd_args.push(args.target.to_string());
        cmd_args.push("--".to_string());
        cmd_args.push(args.output.to_string());
        let flag_args = self.build_flag_args(flags);
        cmd_args.extend(flag_args);
        self.runner.run(cmd_args)
    }

    fn build_flag_args(&self, flags: Option<BuildFlags>) -> Vec<String> {
        let mut result = Vec::new();
        let flags = match flags { Some(f) => f, None => return result };
        if let Some(v) = flags.verbose { for _ in 0..v { result.push("--verbose".to_string()); } }
        if let Some(ref v) = flags.config { result.push("--config".to_string()); result.push(v.to_string()); }
        if let Some(ref vals) = flags.jobs { for v in vals { result.push("--jobs".to_string()); result.push(v.to_string()); } }
        if let Some(v) = flags.release { if v { result.push("--release".to_string()); } }
        result
    }
}

/// Deploy the project
pub struct Deploy {
    runner: CliRunner,
}

impl Deploy {
    pub fn new(runner: CliRunner) -> Self {
        Self {
            runner,
        }
    }
    /// deploy [-f --force] [--confirm] <env> <tags>…

    pub fn exec(&self, args: DeployArgs, flags: Option<DeployFlags>) -> Result<CliResult, crate::runtime::CliError> {
        let mut cmd_args: Vec<String> = vec!["deploy".to_string()];
        cmd_args.push(args.env.to_string());
        cmd_args.extend(args.tags.iter().map(|v| v.to_string()));
        let flag_args = self.build_flag_args(flags);
        cmd_args.extend(flag_args);
        self.runner.run(cmd_args)
    }

    fn build_flag_args(&self, flags: Option<DeployFlags>) -> Vec<String> {
        let mut result = Vec::new();
        let flags = match flags { Some(f) => f, None => return result };
        if let Some(v) = flags.verbose { for _ in 0..v { result.push("--verbose".to_string()); } }
        if let Some(ref v) = flags.config { result.push("--config".to_string()); result.push(v.to_string()); }
        if let Some(v) = flags.force { if v { result.push("--force".to_string()); } }
        if let Some(v) = flags.confirm { if v { result.push("--confirm".to_string()); } }
        result
    }
}
