lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_minimal.snap
---
source: lib/src/sdk/rust/mod.rs
expression: "get_file(&output, \"client.rs\")"
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.
use std::process::Command;

use crate::runtime::{CliRunner, CliResult};

pub struct Hello {
    runner: CliRunner,
}

impl Hello {
    pub fn new(bin_path: &str) -> Self {
        let runner = CliRunner::new(bin_path);
        Self {
            runner,
        }
    }

    pub fn default_bin() -> Self {
        Self::new("hello")
    }

    pub fn exec(&self) -> Result<CliResult, crate::runtime::CliError> {
        let mut cmd_args: Vec<String> = vec![];
        self.runner.run(cmd_args)
    }
}
